# Networking

SimpleCerverClient/: README.md
SimpleCerverClient/client/: CMakeLists.txt  README.md  lsocket.c  lsocket.h  main.c  wsocket.c  wsocket.h
SimpleCerverClient/server/: CMakeLists.txt  crossplatform.h  lsocket.c  lsocket.h  main.c  wsocket.c  wsocket.h
