cmake_minimum_required(VERSION 3.0.0)
project(client VERSION 0.1.0)

include(CTest)
enable_testing()

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
if(WIN32)
    add_executable(client main.c wsocket.h wsocket.c crossplatform.h)  
    target_link_libraries(client ws2_32)
endif (WIN32)
if (UNIX)
    add_executable(client main.c lsocket.h lsocket.c crossplatform.h)
endif(UNIX)